@@ -32,6 +32,13 @@ Tests
 - Issue #25285: Tools/buildbot/test.bat script now uses -j1 by default to run
   each test file in fresh child process.
 
+Windows
+-------
+
+- Issue #27064: The py.exe launcher now defaults to Python 3.
+  The Windows launcher ``py.exe`` no longer prefers an installed
+  Python 2 version over Python 3 by default when used interactively.
+
 
 What's New in Python 3.6.0 alpha 1?
 ===================================
